[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/Formula1Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/Formula1Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/lap_panel.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
resource_local_to_scene = true
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color( 0.321569, 0.34902, 0.411765, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
size = 22
outline_size = 1
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_char = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
resource_local_to_scene = true
size = 18
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_char = 5
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 22
outline_size = 1
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_char = 5
font_data = ExtResource( 2 )

[node name="LapPanel" type="PanelContainer"]
self_modulate = Color( 1, 1, 1, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -794.0
margin_bottom = -571.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Container" type="HBoxContainer" parent="."]
margin_left = 5.0
margin_right = 296.0
margin_bottom = 33.0
custom_constants/separation = 10
alignment = 1

[node name="CountLabel" type="Label" parent="Container"]
margin_right = 25.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "1:"

[node name="PenaltyLabel" type="Label" parent="Container"]
margin_left = 35.0
margin_top = 2.0
margin_right = 130.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 4 )
text = "(+ 5.0)"

[node name="TimeLabel" type="Label" parent="Container"]
margin_left = 140.0
margin_right = 291.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
text = "000.000"
align = 3
